# cdk

./: .clang-format  AUTHORS  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SECURITY.md  cross-compile-harmony.sh
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml  snyk-container.yml  snyk-security.yml
certs/: ca.crt  server.crt
docs/: API-Specification.html  API-Specification.md  cdk-docs.html
docs/css/: cdk-docs.css
docs/html/: cdk-atomic.html  cdk-io.html  cdk-list.html  cdk-loadapi.html  cdk-logger.html  cdk-memory.html  cdk-net.html  cdk-prng.html  cdk-process.html  cdk-queue.html  cdk-rbtree.html  cdk-stack.html  cdk-sync.html  cdk-systeminfo.html  cdk-thread.html  cdk-threadpool.html  cdk-time.html  faq.html
examples/: CMakeLists.txt  cdk-asyn-net-client.c  cdk-asyn-net.c  chat-client.c  chat-protocol.h  chat-server.c  cmake_install.cmake  epoll-usage.c  eventfd-usage.c  example-async-tcp-client.c  example-async-tcp-server.c  example-base64.c  example-heap.c  example-logger.c  example-mtx.c  example-rbtree.c  example-ringbuf.c  example-rwlock.c  example-sha1.c  example-sha256.c  example-spinlock.c  example-sync-tcp-client.c  example-sync-tcp-server.c  example-tcp-client.c  example-tcp-perf-client.c  example-tcp-perf-server.c  example-tcp-server.c  example-tcpclient.c  example-tcpserver.c  example-timer.c  example-tls-client.c  example-tls-server.c  example-udp-client.c  example-udp-server.c  example-udpclient.c  example-udpserver.c  example-varint.c  iocp-server.c  iocp-usage.c  list-usage.c  (+15 more)
examples/certs/: cert.key
examples/file/: load-library.c
examples/file/load-library-libs/: calc.lib
include/: cdk.h
include/cdk/: cdk-atomic.h  cdk-base64.h  cdk-file.h  cdk-io.h  cdk-list.h  cdk-loadapi.h  cdk-loader.h  cdk-logger.h  cdk-math.h  cdk-memory.h  cdk-module.h  cdk-mtx.h  cdk-net.h  cdk-prng.h  cdk-process.h  cdk-queue.h  cdk-rbtree.h  cdk-ringbuffer.h  cdk-rwlock.h  cdk-sha256.h  cdk-stack.h  cdk-string.h  cdk-sync.h  cdk-sysinfo.h  cdk-systeminfo.h  cdk-thread.h  cdk-threadpool.h  cdk-time.h  cdk-timer.h  cdk-types.h  cdk-utils.h  cdk-varint.h
include/cdk/atomic/: cdk-atomic.h
include/cdk/container/: cdk-heap.h  cdk-list.h  cdk-queue.h  cdk-rbtree.h  cdk-ringbuffer.h  cdk-stack.h
include/cdk/coroutine/: cdk-coroutine.h
include/cdk/crypto/: cdk-sha1.h  cdk-sha256.h
include/cdk/deprecated/: c11-threads.h  threads-unix.h  threads-win.h  threads.h
include/cdk/encoding/: cdk-base64.h  cdk-varint.h
include/cdk/file/: cdk-file.h  cdk-loader.h
include/cdk/io/: cdk-io.h
include/cdk/logger/: cdk-logger.h
include/cdk/math/: cdk-prng.h
include/cdk/memory/: cdk-memory.h
include/cdk/net/: cdk-net.h
include/cdk/process/: cdk-process.h
include/cdk/string/: cdk-path.h  cdk-string.h
include/cdk/sync/: cdk-cnd.h  cdk-mtx.h  cdk-rwlock.h  cdk-spinlock.h  cdk-waitgroup.h
include/cdk/sysinfo/: cdk-systeminfo.h
include/cdk/thread/: cdk-cnd.h  cdk-systid.h  cdk-thread.h  cdk-threadpool.h
include/cdk/time/: cdk-time.h  cdk-timer.h
src/: cdk-atomic.c  cdk-base64.c  cdk-cnd.c  cdk-file.c  cdk-io.c  cdk-list.c  cdk-loadapi.c  cdk-loader.c  cdk-logger.c  cdk-math.c  cdk-memory.c  cdk-module.c  cdk-net.c  cdk-prng.c  cdk-process.c  cdk-queue.c  cdk-rbtree.c  cdk-ringbuffer.c  cdk-rwlock.c  cdk-sha256.c  cdk-stack.c  cdk-string.c  cdk-sync.c  cdk-sysinfo.c  cdk-systeminfo.c  cdk-thread.c  cdk-threadpool.c  cdk-time.c  cdk-timer.c  cdk-utils.c  cdk-varint.c
src/atomic/: cdk-atomic.c
src/container/: cdk-heap.c  cdk-list.c  cdk-queue.c  cdk-rbtree.c  cdk-ringbuffer.c  cdk-stack.c
src/coroutine/: cdk-coroutine.c
src/crypto/: cdk-sha1.c  cdk-sha256.c
src/encoding/: cdk-base64.c  cdk-varint.c
src/file/: cdk-file.c  cdk-loader.c
src/io/: cdk-io.c
src/logger/: cdk-logger.c
src/math/: cdk-prng.c
src/memory/: cdk-memory.c
src/net/: cdk-channel.c  cdk-channel.h  cdk-connection.c  cdk-connection.h  cdk-net-connection.c  cdk-net-connection.h  cdk-net-poller.c  cdk-net-poller.h  cdk-net-unpack.c  cdk-net-unpack.h  cdk-net.c  cdk-poller.c  cdk-poller.h  cdk-secure.c  cdk-secure.h  cdk-tls.c  cdk-tls.h  cdk-unpack.c  cdk-unpack.h  channel.c  channel.h  dtls.c  dtls.h  poller.c  poller.h  tls.c  tls.h  txlist.c  txlist.h  unpack.c  unpack.h  unpacker.c  unpacker.h
src/net/http/: todo
src/net/quic/: todo
src/platform/: platform-atomic.h  platform-channel.h  platform-cnd.h  platform-connection.h  platform-event.h  platform-file.h  platform-io.h  platform-loader.h  platform-module.h  platform-mtx.h  platform-net.h  platform-poller.h  platform-process.h  platform-rwlock.h  platform-socket.h  platform-string.h  platform-sync.h  platform-sysinfo.h  platform-systeminfo.h  platform-systid.h  platform-thread.h  platform-time.h  platform-ucontext.h  platform-utils.h
src/platform/unix/: platform-channel.c  platform-connection.c  platform-event.c  platform-file.c  platform-io.c  platform-loader.c  platform-poller.c  platform-process.c  platform-socket.c  platform-string.c  platform-sysinfo.c  platform-thread.c  platform-time.c  platform-ucontext-att.s  platform-ucontext.c  platform-utils.c  unix-atomic.c  unix-cnd.c  unix-event.c  unix-file.c  unix-io.c  unix-loader.c  unix-module.c  (+12 more)
src/process/: cdk-process.c
src/string/: cdk-path.c  cdk-string.c
src/sync/: cdk-cnd.c  cdk-mtx.c  cdk-rwlock.c  cdk-spinlock.c  cdk-waitgroup.c
src/thread/: cdk-mtx.c  cdk-rwlock.c  cdk-systid.c  cdk-thread.c  cdk-threadpool.c
src/time/: cdk-timer.c
src/unix/: unix-atomic.c  unix-atomic.h  unix-event.c  unix-event.h  unix-io.c  unix-io.h  unix-loadapi.c  unix-loadapi.h  unix-net.c  unix-net.h  unix-netpoller.c  unix-netpoller.h  unix-poller.c  unix-poller.h  unix-process.h  unix-sync.c  unix-sync.h  unix-systeminfo.h  unix-thread.c  unix-thread.h  unix-time.h
src/win/: win-atomic.c  win-atomic.h  win-io.c  win-io.h  win-loadapi.c  win-loadapi.h  win-net.c  win-net.h  win-poller.c  win-poller.h  win-process.c  win-process.h  win-sync.c  win-sync.h  win-systeminfo.c  win-systeminfo.h  win-thread.c  win-thread.h  win-time.c  win-time.h
(+34 files in other folders)
